2012-05-27 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClospre.hpp,
	  src/SDCClospre.cc:
	  Fix handling of --max-allocs-per-node in lospre.

2012-05-26 Borut Razem <borut.razem AT gmail.com>

	* src/pic16/main.c: allow space characters in #pragma config

2012-05-25 Borut Razem <borut.razem AT gmail.com>

	* doc/sdccman.lyx: corrected #pragma configure to #pragma config

2012-05-25 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCClospre.hpp:
	  Improve handling of --max-allocs-per-node in lospre.

2012-05-25 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/hc08/gen.c (genPointerSet): fixed warning

2012-05-25 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCicode.h,
	  src/SDCCicode.c,
	  src/SDCClospre.hpp,
	  src/SDCClospre.cc:
	  Fixes for handling of globals and volatile in lospre.

2012-05-25 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/scripts/sdcc.nsi: fix my typo in r3ka path

2012-05-24 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCClospre.hpp,
	  src/SDCClospre.cc:
	  lospre.

2012-05-24 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/peeph-r2k.def,
	  src/z80/peeph-z80.def,
	  src/z80/peeph-gbz80.def:
	  Jump optimization.

2012-05-24 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/ralloc2.cc,
	  src/z80/gen.c:
	  Non-destructive & with bit literal.

2012-05-24 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCClospre.hpp,
	  src/SDCClospre.cc:
	  Preparations for lospre.

2012-05-24 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/hc08/peeph.def:
	  Improve elimination of branches.

2012-05-24 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCClospre.hpp,
	  src/SDCClospre.cc:
	  Preparations for lospre.
	* src/z80/gen.c:
	  More verbose debugging for variables that are not in registers, but should be.
